<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pageScroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/postEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postEntry" >

            <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/postParams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/postParams"
        android:inputType="textMultiLine|textNoSuggestions" />

    <EditText
        android:id="@+id/postAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/postAuth"
        android:inputType="textMultiLine|textNoSuggestions" />

    <RadioGroup
        android:id="@+id/reqGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/getOpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/getOpt" />

        <RadioButton
            android:id="@+id/postOpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postOpt" />
    </RadioGroup>

    <Button
        android:id="@+id/postSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="postData"
        android:text="@string/postSend" />
        
    <View
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="#CCCCCC" />
    
    <TextView
        android:id="@+id/postResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/postResponse"
        android:autoLink="all"
        tools:context=".MainActivity" />

</LinearLayout>
</ScrollView>

